# VoxelViewer

./: .gitignore  CMakeLists.txt  README.md
Linux/: CMakeLists.txt  main.cpp
Linux/backup/: copy.txt  cp_bin.txt  main_bak.cpp  test.cpp
Linux/include/math/: mat.h  vec.h  vmath.h
PyViewer/: backup.py  common.py  main.py
Win/VoxelViewer/: VoxelViewer.sln
Win/VoxelViewer/Debug/: VoxelViewer.ilk
Win/VoxelViewer/VoxelViewer/: VoxelViewer.vcxproj  VoxelViewer.vcxproj.filters  drawsolidcube.txt  main.cpp  mainGPU.cpp
Win/VoxelViewer/VoxelViewer/Debug/: vc120.idb
Win/VoxelViewer/VoxelViewer/Debug/VoxelViewer.tlog/: CL.read.1.tlog  CL.write.1.tlog  VoxelViewer.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Win/VoxelViewer/VoxelViewer/include/: gluTest.h
Win/VoxelViewer/VoxelViewer/include/math/: mat.h
backup/: cp_bin.txt  test.cpp
include/: gluTest.h
include/math/: vec.h  vmath.h
